--- a/steam_module.routing.yml
+++ b/steam_module.routing.yml
@@ -5,10 +5,11 @@ book.settings:
     _title: 'Steam User Configuration'
   requirements:
     _permission: 'administer site configuration'
+
 steam_module.getAllGames:
   path: '/steam/get_all_games'
   defaults:
-    _Controller: '\Drupal\steam_module\Controller\SteamData::getAllGames'
+    _controller: '\Drupal\steam_module\Controller\SteamData::getAllGames'
     _title: 'Get steam games'
   requirements:
     _permission: 'access content'
